Added some CSS to KEEP PRACTICING

--- a/Resources/style.css
+++ b/Resources/style.css
@@ -51,3 +51,12 @@ padding: 8px 16px;
 .block-long {
     display: flex;
 }
+
+.block-long img {
+    width: 35%;
+    height: auto;
+    background-size: cover;
+    margin: 16px;
+}
+
+/* QUEDE queriendo cambiar el tamaño de las imágenes de block-long */
