--- a/Resources/style.css
+++ b/Resources/style.css
@@ -14,6 +14,9 @@ header {
 
 header img {
     margin-left: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 header p {
