--- a/Resources/style.css
+++ b/Resources/style.css
@@ -3,6 +3,7 @@ body {
     box-sizing: border-box;
     margin: 0;
     border: 0;
+    font-family: Helvetica, sans-serif;
 }
 /* NAVBAR */
 header {
@@ -59,10 +60,23 @@ main {
 main img {
     width: 60%;
     margin: 32px 24px;
+    background-size: cover;
 }
 
 #banner {
     width: 400px;
+    height: auto; 
+    padding-top: 200px;
+}
+
+#banner h1 {
+    font-size: 45px;
+}
+
+#banner h3 {
+    font-size: 25px;
+    font-weight: normal;
+    margin: 30px 0;
 }
 
 button {
