--- a/Resources/style.css
+++ b/Resources/style.css
@@ -96,9 +96,14 @@ button {
     margin-bottom: 0;
 }
 
-.white-block .img-block img {
+.white-block .img-block {
     width: 60%;
-    margin: 32px 24px;
+    margin-bottom: 32px;
+}
+
+.white-block .img-block img {
+    width: 100%;
+    margin: 32px 24px 0 24px;
 }
 
 .white-block a {
@@ -106,19 +111,56 @@ button {
     text-decoration: none;
 }
 
-.block-long {
-    display: flex;
+.white-block .wh-words {
+    margin-left: 24px;
 }
 
-.block-long img {
-    width: 35%;
+.white-block .wh-words h2 {
+    font-size: 40px;
+}
+
+.white-block .wh-words p {
+    font-size: 22px;
+    font-weight: lighter;
+}
+
+.white-block .wh-words span {
+    font-size: 18px;
+}
+
+#block-long {
+    width: 40%;
+    margin-left: 50px;
+}
+
+.block-long-up {
+    display: flex;
+    border: solid 1px #e0e2e2;
+    padding:32px 16px 16px 16px;
+}
+
+.img {
     height: auto;
+    width: 35%;
     background-size: cover;
-    margin: 16px;
+}
+
+.block-long {
+    display: flex;
+    border: solid 1px #e0e2e2;
+    padding: 16px;
 }
 
 .block-long .words {
     display: block;
+    padding-top: 30px;
+    margin-left: 16px;
+}
+
+.block-long-up .words {
+    display: block;
+    padding-top: 30px;
+    margin-left: 16px;
 }
 
 /* START LEARNING */
